@@ -1,9 +1,6 @@
 package ru.hse.trilis.blackjack;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Random;
+import java.util.*;
 
 public class Deck {
     private List<Card> cards = new ArrayList<>();
@@ -16,19 +13,19 @@ public class Deck {
     }
 
     public Deck(int seed) {
-        addCards("A", List.of(1, 11));
-        addCards("2", List.of(2));
-        addCards("3", List.of(3));
-        addCards("4", List.of(4));
-        addCards("5", List.of(5));
-        addCards("6", List.of(6));
-        addCards("7", List.of(7));
-        addCards("8", List.of(8));
-        addCards("9", List.of(9));
-        addCards("10", List.of(10));
-        addCards("J", List.of(10));
-        addCards("Q", List.of(10));
-        addCards("K", List.of(10));
+        addCards("A", Arrays.asList(1, 11));
+        addCards("2", Arrays.asList(2));
+        addCards("3", Arrays.asList(3));
+        addCards("4", Arrays.asList(4));
+        addCards("5", Arrays.asList(5));
+        addCards("6", Arrays.asList(6));
+        addCards("7", Arrays.asList(7));
+        addCards("8", Arrays.asList(8));
+        addCards("9", Arrays.asList(9));
+        addCards("10", Arrays.asList(10));
+        addCards("J", Arrays.asList(10));
+        addCards("Q", Arrays.asList(10));
+        addCards("K", Arrays.asList(10));
         Collections.shuffle(cards, new Random(seed));
     }
 
