@@ -4,6 +4,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -45,12 +46,12 @@ class GameTest {
 
     @Test
     void optimalSumAcc() {
-        assertEquals(11, Game.optimalSum(Collections.singletonList(new Card("", List.of(11, 1)))));
+        assertEquals(11, Game.optimalSum(Collections.singletonList(new Card("", Arrays.asList(11, 1)))));
     }
 
     @Test
     void optimalSumTwoAcc() {
-        var acc = new Card("", List.of(11, 1));
-        assertEquals(12, Game.optimalSum(List.of(acc, acc)));
+        var acc = new Card("", Arrays.asList(11, 1));
+        assertEquals(12, Game.optimalSum(Arrays.asList(acc, acc)));
     }
 }
